# garagem

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_remove_categoria_nome_alter_categoria_descrição.py  0004_acessorio.py  0005_cor.py  0006_veiculo.py  0007_veiculo_acessorio.py
garagem/models/: modelo.py  veiculo.py
garagem/serializers/: veiculo.py
garagemm/: admin.py  apps.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
